--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
     <!-- Leaflet CSS -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
     <style>
       /* Style the map container */
       .map {
@@ -30,7 +30,7 @@
   </head>
   <body>
     <div class="logo" style="margin-top: 10px">
-      <img src="logozippy.png" alt="Bootstrap" width="150px" style="margin: auto; display: flex; margin-top: 10px" />
+      <img src="logofixZippy.png" alt="Bootstrap" width="230px" style="margin: auto; display: flex; margin-top: 10px" />
     </div>
     <div class="jargon mt-3" style="margin-left: 20px; margin-right: 20px">
       <h1 class="text-center">Yuk isi data pesananmu dulu ya</h1>
@@ -56,7 +56,7 @@
             <!-- Tampilkan peta Leaflet disini -->
             <p class="mt-2"><b>Catatan : Jika peta koordinat salah, maka diabaikan saja</b></p>
             <div class="d-grid gap-2">
-              <button id="getLocationBtn" class="btn btn-primary mt-2" type="button">Dapatkan Lokasi</button>
+              <button id="getLocationBtn" class="btn btn-primary mt-2" type="button"><i class="bi bi-geo"></i> Dapatkan Lokasi</button>
             </div>
             <div class="mb-3">
               <p id="titikkoordinat"></p>
@@ -71,7 +71,7 @@
               <p class="mt-2" style="color: gray; font-size: 14px"><b>Catatan : Khusus untuk daerah sekitar Mataram Rp 8.000</b></p>
             </div>
             <div class="bayar">
-              <button type="submit" class="btn btn-primary mt-3">Pesan Sekarang</button>
+              <button type="submit" class="btn btn-primary mt-3">Pesan Sekarang <i class="bi bi-arrow-right-circle-fill"></i></button>
               <h4 class="mt-3"><b>Total Bayar</b></h4>
               <p id="bayar"></p>
             </div>
