--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
               <p class="mt-2" style="color: gray; font-size: 14px"><b>Catatan : Khusus untuk daerah sekitar Mataram Rp 8.000</b></p>
             </div>
             <div class="bayar">
-              <button type="submit" class="btn btn-primary mt-3">Pesan Sekarang <i class="bi bi-arrow-right-circle-fill"></i></button>
+              <div class="d-grid gap-2">
+                <button type="submit" class="btn btn-primary mt-3">Pesan Sekarang <i class="bi bi-arrow-right-circle-fill"></i></button>
+              </div>
               <h4 class="mt-3"><b>Total Bayar</b></h4>
               <p id="bayar"></p>
             </div>
