--- a/index.html
+++ b/index.html
@@ -1,151 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Bootstrap demo</title>
-    <!-- Bootstrap CSS -->
+    <title>Dashboard</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
-    <!-- Leaflet CSS -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
-    <style>
-      /* Style the map container */
-      .map {
-        height: 300px;
-      }
-
-      /* Style the button */
-      .btn-primary {
-        background-color: #e8751a;
-        border-color: #e8751a;
-      }
-
-      /* Change button color on hover */
-      .btn-primary:hover {
-        background-color: #ff9933;
-        border-color: #ff9933;
-      }
-    </style>
   </head>
   <body>
-    <div class="logo" style="margin-top: 10px">
-      <img src="logofixZippy.png" alt="Bootstrap" width="230px" style="margin: auto; display: flex; margin-top: 10px" />
+    <!-- Jargon -->
+    <div class="logo" style="margin-top: 20px">
+      <img src="LogofixZippy.png" alt="" width="250px" style="margin: auto; display: flex" />
     </div>
-    <div class="jargon mt-3" style="margin-left: 20px; margin-right: 20px">
-      <h1 class="text-center">Yuk isi data pesananmu dulu ya</h1>
+    <h2 class="text-center mt-3"><b>Pilih Layananmu Dulu Ya</b></h2>
+    <!-- Jargon -->
+
+    <!-- Layanan -->
+    <div class="container mt-3">
+      <select id="layananSelect" class="form-select" aria-label="Default select example">
+        <option selected disabled>Pilih Layananmu</option>
+        <option value="ojek">🛵 Ojek Online</option>
+        <option value="food">🍔 Food Delivery</option>
+        <option value="kurir">📦 Kurir</option>
+        <option value="homecare">👏 Homecare</option>
+      </select>
     </div>
-    <div class="container mt-5">
-      <div class="card shadow-lg p-3 mb-5 bg-body-tertiary rounded">
-        <div class="card-body">
-          <form>
-            <div class="mb-3">
-              <label for="exampleInputEmail1" class="form-label">Masukkan Namamu</label>
-              <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" />
-            </div>
-            <div class="mb-3">
-              <label for="exampleInputPassword1" class="form-label">Beli Dimana ?</label>
-              <input type="text" class="form-control" id="exampleInputPassword1" />
-            </div>
-            <div class="mb-3">
-              <label for="exampleInputPassword1" class="form-label">Mau dianterin kemana ?</label>
-              <input type="text" class="form-control" id="exampleInputPassword1" />
-            </div>
-            <!-- Tampilkan peta Leaflet disini -->
-            <div id="mapid" class="map" style="border-radius: 10px"></div>
-            <!-- Tampilkan peta Leaflet disini -->
-            <p class="mt-2"><b>Catatan : Jika peta koordinat salah, maka diabaikan saja</b></p>
-            <div class="d-grid gap-2">
-              <button id="getLocationBtn" class="btn btn-primary mt-2" type="button"><i class="bi bi-geo"></i> Dapatkan Lokasi</button>
-            </div>
-            <div class="mb-3">
-              <p id="titikkoordinat"></p>
-            </div>
-            <div class="mb-3">
-              <label for="" class="form-label">Masukkan Pesananmu</label>
-              <textarea class="form-control mb-3" id="exampleComment" rows="5" placeholder="Masukkan pesananmu disini"></textarea>
-            </div>
-            <div class="mb-3 form-check">
-              <input type="checkbox" class="form-check-input" id="exampleCheck1" />
-              <label class="form-check-label" for="exampleCheck1">Anda yakin pesanan sudah benar ?</label>
-              <p class="mt-2" style="color: gray; font-size: 14px"><b>Catatan : Khusus untuk daerah sekitar Mataram Rp 8.000</b></p>
-            </div>
-            <div class="bayar">
-              <div class="d-grid gap-2">
-                <button type="submit" class="btn btn-primary mt-3">Pesan Sekarang <i class="bi bi-arrow-right-circle-fill"></i></button>
-              </div>
-              <h4 class="mt-3"><b>Total Bayar</b></h4>
-              <p id="bayar"></p>
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
-    <!-- Bootstrap JS -->
+    <!-- Layanan -->
+
+    <script src="main.js"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <!-- Leaflet JS -->
-    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-    <script>
-      document.addEventListener("DOMContentLoaded", function () {
-        var map = L.map("mapid").setView([-8.5831, 116.116], 13); // Set initial location to Mataram, NTB, Indonesia
-        var marker;
-        var totalBayar = 0;
-
-        L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", {
-          maxZoom: 19,
-          attribution: 'Map data © <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors',
-        }).addTo(map);
-
-        function onLocationFound(e) {
-          if (marker) {
-            map.removeLayer(marker);
-          }
-          marker = L.marker(e.latlng).addTo(map);
-          var latitude = e.latlng.lat.toFixed(7);
-          var longitude = e.latlng.lng.toFixed(7);
-          document.getElementById("titikkoordinat").textContent = "Latitude: " + latitude + ", Longitude: " + longitude;
-
-          // Tentukan biaya berdasarkan lokasi
-          var mataramBoundary = L.latLngBounds([-8.6085, 116.0264], [-8.5147, 116.1881]);
-          if (mataramBoundary.contains(e.latlng)) {
-            totalBayar = 8000; // Mataram
-          } else {
-            totalBayar = 12000; // Luar Mataram
-          }
-          document.getElementById("bayar").textContent = "Total Bayar: Rp " + totalBayar.toLocaleString();
-        }
-
-        function onLocationError(e) {
-          alert(e.message);
-        }
-
-        document.getElementById("getLocationBtn").addEventListener("click", function () {
-          navigator.geolocation.getCurrentPosition(
-            function (position) {
-              var latlng = L.latLng(position.coords.latitude, position.coords.longitude);
-              map.setView(latlng, 16);
-              if (marker) {
-                map.removeLayer(marker);
-              }
-              marker = L.marker(latlng).addTo(map);
-              document.getElementById("titikkoordinat").textContent = "Latitude: " + position.coords.latitude.toFixed(7) + ", Longitude: " + position.coords.longitude.toFixed(7);
-
-              // Tentukan biaya berdasarkan lokasi
-              var mataramBoundary = L.latLngBounds([-8.6085, 116.0264], [-8.5147, 116.1881]);
-              if (mataramBoundary.contains(latlng)) {
-                totalBayar = 8000; // Mataram
-              } else {
-                totalBayar = 12000; // Luar Mataram
-              }
-              document.getElementById("bayar").textContent = "Total Bayar: Rp " + totalBayar.toLocaleString();
-            },
-            function (error) {
-              alert("Tidak dapat menemukan lokasi: " + error.message);
-            },
-            { enableHighAccuracy: true }
-          );
-        });
-      });
-    </script>
   </body>
 </html>
