--- a/index.html
+++ b/index.html
@@ -12,11 +12,14 @@
     <div class="logo" style="margin-top: 20px">
       <img src="LogofixZippy.png" alt="" width="250px" style="margin: auto; display: flex" />
     </div>
-    <h2 class="text-center mt-3"><b>Pilih Layananmu Dulu Ya</b></h2>
+    <h2 class="text-center mt-4">
+      <b>Pilih <span style="color: #ff9933">Layananmu</span> Dulu Ya</b>
+    </h2>
+    <h6 class="text-center">Semua Layanan Ada untuk <span style="color: #ff9933">Kamu</span></h6>
     <!-- Jargon -->
 
     <!-- Layanan -->
-    <div class="container mt-3">
+    <div class="container mt-3" style="width: 90%">
       <select id="layananSelect" class="form-select" aria-label="Default select example">
         <option selected disabled>Pilih Layananmu</option>
         <option value="ojek">🛵 Ojek Online</option>
@@ -27,6 +30,37 @@
     </div>
     <!-- Layanan -->
 
+    <!--Membership-->
+    <div class="container mt-5">
+      <div class="card shadow p-3 mb-5 bg-body-tertiary rounded">
+        <div class="card-body">
+          <h3 class="text-center" style="border-bottom: black 2px solid; padding-bottom: 10px">
+            <b>Membership <span style="color: #ff9933">Zippy</span></b>
+          </h3>
+          <p class="text-center">
+            Dapatkan keuntungan dari <span style="color: #ff9933"><b> Diskon</b></span> hingga <span style="color: #ff9933"><b>Gratis Ongkir</b></span> dengan membeli membership 🤩
+          </p>
+          <!--MembershipSilver-->
+          <div class="alert alert-primary mt-4" role="alert">
+            <p><b>💡 Member Silver</b></p>
+            <p><b>📍 Sekitar Kota Mataram</b></p>
+            <p>1. Gratis Ongkir 3x untuk layanan ojek, food delivery, dan kurir</p>
+            <p style="margin-top: -8px">2. Dapatkan diskon sebanyak 2x hingga 25% untuk semua layanan</p>
+            <p><b>📍 Diluar Kota Mataram</b></p>
+            <p>1. Gratis Ongkir 2x untuk layanan ojek, food delivery, dan kurir</p>
+            <p style="margin-top: -8px">2. Dapatkan diskon sebanyak 2x hingga 25% untuk semua layanan</p>
+            <button class="btn btn-success">Beli Member</button>
+          </div>
+          <!--MembershipSilver-->
+          <!--MembershipGold-->
+          <div class="alert alert-primary mt-4" role="alert">
+            <p><b>💡 Member Gold</b></p>
+          </div>
+          <!--MembershipGold-->
+        </div>
+      </div>
+    </div>
+    <!--Membership-->
     <script src="main.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
