--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Dashboard</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
   </head>
   <body>
     <!-- Jargon -->
@@ -40,21 +41,118 @@
           <p class="text-center">
             Dapatkan keuntungan dari <span style="color: #ff9933"><b> Diskon</b></span> hingga <span style="color: #ff9933"><b>Gratis Ongkir</b></span> dengan membeli membership 🤩
           </p>
+
           <!--MembershipSilver-->
           <div class="alert alert-primary mt-4" role="alert">
-            <p><b>💡 Member Silver</b></p>
-            <p><b>📍 Sekitar Kota Mataram</b></p>
-            <p>1. Gratis Ongkir 3x untuk layanan ojek, food delivery, dan kurir</p>
-            <p style="margin-top: -8px">2. Dapatkan diskon sebanyak 2x hingga 25% untuk semua layanan</p>
-            <p><b>📍 Diluar Kota Mataram</b></p>
-            <p>1. Gratis Ongkir 2x untuk layanan ojek, food delivery, dan kurir</p>
-            <p style="margin-top: -8px">2. Dapatkan diskon sebanyak 2x hingga 25% untuk semua layanan</p>
-            <button class="btn btn-success">Beli Member</button>
+            <p style="font-size: 20px"><b>Member Silver</b></p>
+            <!-- Button trigger modal -->
+            <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#exampleModal">Lihat Member <i class="bi bi-arrow-right-circle-fill"></i></button>
+
+            <!-- Modal -->
+            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Membersip Silver</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  </div>
+                  <div class="modal-body">
+                    <div class="alert alert-success" role="alert">
+                      <p><b>📍 Sekitar Kota Mataram</b></p>
+                      <p>1. Gratis Ongkir 3x untuk layanan ojek, food delivery, dan kurir</p>
+                      <p style="margin-top: -8px">2. Dapatkan diskon sebanyak 2x hingga 25% untuk semua layanan</p>
+                      <p><b>📍 Diluar Kota Mataram</b></p>
+                      <p>1. Gratis Ongkir 2x untuk layanan ojek, food delivery, dan kurir</p>
+                      <p style="margin-top: -8px">2. Dapatkan diskon sebanyak 2x hingga 25% untuk semua layanan</p>
+                    </div>
+                    <!--Accordion-->
+                    <div class="accordion accordion-flush" id="accordionFlushExample">
+                      <div class="accordion-item">
+                        <h2 class="accordion-header">
+                          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">Cara Pakai</button>
+                        </h2>
+                        <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                          <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+                        </div>
+                      </div>
+                      <div class="accordion-item">
+                        <h2 class="accordion-header">
+                          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">Syarat dan Ketentuan</button>
+                        </h2>
+                        <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                          <div class="accordion-body">
+                            Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual
+                            content.
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <!--Accordion-->
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-success">Rp. 35.000</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!--Modal-->
           </div>
           <!--MembershipSilver-->
+
           <!--MembershipGold-->
           <div class="alert alert-primary mt-4" role="alert">
-            <p><b>💡 Member Gold</b></p>
+            <p style="font-size: 20px"><b>Member Gold</b></p>
+            <!-- Button trigger modal -->
+            <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#exampleModal">Lihat Member <i class="bi bi-arrow-right-circle-fill"></i></button>
+
+            <!-- Modal -->
+            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Membersip Gold</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  </div>
+                  <div class="modal-body">
+                    <div class="alert alert-success" role="alert">
+                      <p><b>📍 Sekitar Kota Mataram</b></p>
+                      <p>1. Gratis Ongkir 3x untuk layanan ojek, food delivery, dan kurir</p>
+                      <p style="margin-top: -8px">2. Dapatkan diskon sebanyak 2x hingga 25% untuk semua layanan</p>
+                      <p><b>📍 Diluar Kota Mataram</b></p>
+                      <p>1. Gratis Ongkir 2x untuk layanan ojek, food delivery, dan kurir</p>
+                      <p style="margin-top: -8px">2. Dapatkan diskon sebanyak 2x hingga 25% untuk semua layanan</p>
+                    </div>
+                    <!--Accordion-->
+                    <div class="accordion accordion-flush" id="accordionFlushExample">
+                      <div class="accordion-item">
+                        <h2 class="accordion-header">
+                          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">Cara Pakai</button>
+                        </h2>
+                        <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                          <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+                        </div>
+                      </div>
+                      <div class="accordion-item">
+                        <h2 class="accordion-header">
+                          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">Syarat dan Ketentuan</button>
+                        </h2>
+                        <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                          <div class="accordion-body">
+                            Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual
+                            content.
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <!--Accordion-->
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-success">Rp. 35.000</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!--Modal-->
           </div>
           <!--MembershipGold-->
         </div>
