--- a/index.html
+++ b/index.html
@@ -42,14 +42,75 @@
             Dapatkan keuntungan dari <span style="color: #ff9933"><b> Diskon</b></span> hingga <span style="color: #ff9933"><b>Gratis Ongkir</b></span> dengan membeli membership 🤩
           </p>
 
+          <!--MemberBronze-->
+          <div class="alert alert-primary mt-4" role="alert">
+            <p style="font-size: 20px"><b>Member Bronze</b></p>
+            <!-- Button trigger modal -->
+            <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#exampleModalLabelBronze">Lihat Member <i class="bi bi-arrow-right-circle-fill"></i></button>
+
+            <!-- Modal -->
+            <div class="modal fade" id="exampleModalLabelBronze" tabindex="-1" aria-labelledby="exampleModalLabelBronze" aria-hidden="true">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Membersip Bronze</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  </div>
+                  <div class="modal-body">
+                    <div class="alert alert-success" role="alert">
+                      <p><b>📍 Sekitar Kota Mataram</b></p>
+                      <p>1. Dapatkan diskon sebanyak 2x sebesar 25% untuk semua layanan</p>
+                      <p><b>📍 Diluar Kota Mataram</b></p>
+                      <p>1. Dapatkan diskon sebanyak 1x sebesar 25% untuk semua layanan</p>
+                    </div>
+                    <!--Accordion-->
+                    <div class="accordion accordion-flush" id="accordionFlushExample">
+                      <div class="accordion-item">
+                        <h2 class="accordion-header">
+                          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne"><b>Cara Pakai</b></button>
+                        </h2>
+                        <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                          <div class="accordion-body">
+                            <p style="margin-top: -10px">1. Pilih salah satu layanan apa saja dari kami zippy</p>
+                            <p style="margin-top: -10px">2. Lakukan pemesanan pada layanan</p>
+                            <p style="margin-top: -10px">3. Jika kamu mempunyai membership, kamu bisa mengkonfirmasi ke admin untuk bisa memakai diskon atau gratis ongkir dari membership kamu</p>
+                            <p style="margin-top: -10px">4. Admin akan mengkonfirmasi membership kamu</p>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="accordion-item">
+                        <h2 class="accordion-header">
+                          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo"><b>Syarat dan Ketentuan</b></button>
+                        </h2>
+                        <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                          <div class="accordion-body">
+                            <p style="margin-top: -10px">1. Membership hanya berlaku untuk 1 bulan saja</p>
+                            <p style="margin-top: -10px">2. Tidak bisa melakukan refund membership</p>
+                            <p style="margin-top: -10px">3. Untuk pembayaran membership hanya bisa dilakukan dengan metode pembayaran Dana, Gopay, dan Shopepay</p>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <!--Accordion-->
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-success">Rp. 25.000</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!--Modal-->
+          </div>
+          <!--MemberBronze-->
+
           <!--MembershipSilver-->
           <div class="alert alert-primary mt-4" role="alert">
             <p style="font-size: 20px"><b>Member Silver</b></p>
             <!-- Button trigger modal -->
-            <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#exampleModal">Lihat Member <i class="bi bi-arrow-right-circle-fill"></i></button>
+            <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#exampleModalLabelSilver">Lihat Member <i class="bi bi-arrow-right-circle-fill"></i></button>
 
             <!-- Modal -->
-            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal fade" id="exampleModalLabelSilver" tabindex="-1" aria-labelledby="exampleModalLabelSilver" aria-hidden="true">
               <div class="modal-dialog">
                 <div class="modal-content">
                   <div class="modal-header">
@@ -69,20 +130,26 @@
                     <div class="accordion accordion-flush" id="accordionFlushExample">
                       <div class="accordion-item">
                         <h2 class="accordion-header">
-                          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">Cara Pakai</button>
+                          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne"><b>Cara Pakai</b></button>
                         </h2>
                         <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                          <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+                          <div class="accordion-body">
+                            <p style="margin-top: -10px">1. Pilih salah satu layanan apa saja dari kami zippy</p>
+                            <p style="margin-top: -10px">2. Lakukan pemesanan pada layanan</p>
+                            <p style="margin-top: -10px">3. Jika kamu mempunyai membership, kamu bisa mengkonfirmasi ke admin untuk bisa memakai diskon atau gratis ongkir dari membership kamu</p>
+                            <p style="margin-top: -10px">4. Admin akan mengkonfirmasi membership kamu</p>
+                          </div>
                         </div>
                       </div>
                       <div class="accordion-item">
                         <h2 class="accordion-header">
-                          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">Syarat dan Ketentuan</button>
+                          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo"><b>Syarat dan Ketentuan</b></button>
                         </h2>
                         <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
                           <div class="accordion-body">
-                            Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual
-                            content.
+                            <p style="margin-top: -10px">1. Membership hanya berlaku untuk 1 bulan saja</p>
+                            <p style="margin-top: -10px">2. Tidak bisa melakukan refund membership</p>
+                            <p style="margin-top: -10px">3. Untuk pembayaran membership hanya bisa dilakukan dengan metode pembayaran Dana, Gopay, dan Shopepay</p>
                           </div>
                         </div>
                       </div>
@@ -90,7 +157,7 @@
                     <!--Accordion-->
                   </div>
                   <div class="modal-footer">
-                    <button type="button" class="btn btn-success">Rp. 35.000</button>
+                    <button type="button" class="btn btn-success">Rp. 30.000</button>
                   </div>
                 </div>
               </div>
@@ -103,43 +170,50 @@
           <div class="alert alert-primary mt-4" role="alert">
             <p style="font-size: 20px"><b>Member Gold</b></p>
             <!-- Button trigger modal -->
-            <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#exampleModal">Lihat Member <i class="bi bi-arrow-right-circle-fill"></i></button>
+            <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#exampleModalLabelGold">Lihat Member <i class="bi bi-arrow-right-circle-fill"></i></button>
 
             <!-- Modal -->
-            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal fade" id="exampleModalLabelGold" tabindex="-1" aria-labelledby="exampleModalLabelGold" aria-hidden="true">
               <div class="modal-dialog">
                 <div class="modal-content">
                   <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="exampleModalLabel">Membersip Gold</h1>
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Membersip Silver</h1>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                   </div>
                   <div class="modal-body">
                     <div class="alert alert-success" role="alert">
                       <p><b>📍 Sekitar Kota Mataram</b></p>
-                      <p>1. Gratis Ongkir 3x untuk layanan ojek, food delivery, dan kurir</p>
-                      <p style="margin-top: -8px">2. Dapatkan diskon sebanyak 2x hingga 25% untuk semua layanan</p>
+                      <p>1. Gratis Ongkir 4x untuk layanan ojek, food delivery, dan kurir</p>
+                      <p style="margin-top: -8px">2. Dapatkan diskon sebanyak 3x hingga 25% untuk semua layanan</p>
+                      <p style="margin-top: -8px">3. Kecepetan pengiriman 20 menit</p>
                       <p><b>📍 Diluar Kota Mataram</b></p>
                       <p>1. Gratis Ongkir 2x untuk layanan ojek, food delivery, dan kurir</p>
-                      <p style="margin-top: -8px">2. Dapatkan diskon sebanyak 2x hingga 25% untuk semua layanan</p>
+                      <p style="margin-top: -8px">2. Dapatkan diskon sebanyak 3x hingga 25% untuk semua layanan</p>
                     </div>
                     <!--Accordion-->
                     <div class="accordion accordion-flush" id="accordionFlushExample">
                       <div class="accordion-item">
                         <h2 class="accordion-header">
-                          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">Cara Pakai</button>
+                          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne"><b>Cara Pakai</b></button>
                         </h2>
                         <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                          <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+                          <div class="accordion-body">
+                            <p style="margin-top: -10px">1. Pilih salah satu layanan apa saja dari kami zippy</p>
+                            <p style="margin-top: -10px">2. Lakukan pemesanan pada layanan</p>
+                            <p style="margin-top: -10px">3. Jika kamu mempunyai membership, kamu bisa mengkonfirmasi ke admin untuk bisa memakai diskon atau gratis ongkir dari membership kamu</p>
+                            <p style="margin-top: -10px">4. Admin akan mengkonfirmasi membership kamu</p>
+                          </div>
                         </div>
                       </div>
                       <div class="accordion-item">
                         <h2 class="accordion-header">
-                          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">Syarat dan Ketentuan</button>
+                          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo"><b>Syarat dan Ketentuan</b></button>
                         </h2>
                         <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
                           <div class="accordion-body">
-                            Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual
-                            content.
+                            <p style="margin-top: -10px">1. Membership hanya berlaku untuk 1 bulan saja</p>
+                            <p style="margin-top: -10px">2. Tidak bisa melakukan refund membership</p>
+                            <p style="margin-top: -10px">3. Untuk pembayaran membership hanya bisa dilakukan dengan metode pembayaran Dana, Gopay, dan Shopepay</p>
                           </div>
                         </div>
                       </div>
@@ -147,7 +221,7 @@
                     <!--Accordion-->
                   </div>
                   <div class="modal-footer">
-                    <button type="button" class="btn btn-success">Rp. 35.000</button>
+                    <button type="button" class="btn btn-success">Rp. 50.000</button>
                   </div>
                 </div>
               </div>
