--- a/index.html
+++ b/index.html
@@ -80,6 +80,20 @@
                       </div>
                       <div class="accordion-item">
                         <h2 class="accordion-header">
+                          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo"><b>Cara Pembelian</b></button>
+                        </h2>
+                        <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                          <div class="accordion-body">
+                            <p style="margin-top: -10px">1. Pilih paket membership yang kamu mau</p>
+                            <p style="margin-top: -10px">2. Beli paket membership</p>
+                            <p style="margin-top: -10px">3. Admin akan memberikan form isi data membership kamu di whatsapp</p>
+                            <p style="margin-top: -10px">4. Isi data formulir membership kamu</p>
+                            <p style="margin-top: -10px">5. Membership kamu aktif dan siap digunakan</p>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="accordion-item">
+                        <h2 class="accordion-header">
                           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo"><b>Syarat dan Ketentuan</b></button>
                         </h2>
                         <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
@@ -94,7 +108,7 @@
                     <!--Accordion-->
                   </div>
                   <div class="modal-footer">
-                    <button type="button" class="btn btn-success">Rp. 25.000</button>
+                    <a href="#" class="btn btn-success">Rp. 25.000</a>
                   </div>
                 </div>
               </div>
@@ -143,6 +157,20 @@
                       </div>
                       <div class="accordion-item">
                         <h2 class="accordion-header">
+                          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo"><b>Cara Pembelian</b></button>
+                        </h2>
+                        <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                          <div class="accordion-body">
+                            <p style="margin-top: -10px">1. Pilih paket membership yang kamu mau</p>
+                            <p style="margin-top: -10px">2. Beli paket membership</p>
+                            <p style="margin-top: -10px">3. Admin akan memberikan form isi data membership kamu di whatsapp</p>
+                            <p style="margin-top: -10px">4. Isi data formulir membership kamu</p>
+                            <p style="margin-top: -10px">5. Membership kamu aktif dan siap digunakan</p>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="accordion-item">
+                        <h2 class="accordion-header">
                           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo"><b>Syarat dan Ketentuan</b></button>
                         </h2>
                         <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
@@ -157,7 +185,7 @@
                     <!--Accordion-->
                   </div>
                   <div class="modal-footer">
-                    <button type="button" class="btn btn-success">Rp. 30.000</button>
+                    <a href="#" class="btn btn-success">Rp. 30.000</a>
                   </div>
                 </div>
               </div>
@@ -177,7 +205,7 @@
               <div class="modal-dialog">
                 <div class="modal-content">
                   <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="exampleModalLabel">Membersip Silver</h1>
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Membersip Gold</h1>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                   </div>
                   <div class="modal-body">
@@ -207,6 +235,20 @@
                       </div>
                       <div class="accordion-item">
                         <h2 class="accordion-header">
+                          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo"><b>Cara Pembelian</b></button>
+                        </h2>
+                        <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                          <div class="accordion-body">
+                            <p style="margin-top: -10px">1. Pilih paket membership yang kamu mau</p>
+                            <p style="margin-top: -10px">2. Beli paket membership</p>
+                            <p style="margin-top: -10px">3. Admin akan memberikan form isi data membership kamu di whatsapp</p>
+                            <p style="margin-top: -10px">4. Isi data formulir membership kamu</p>
+                            <p style="margin-top: -10px">5. Membership kamu aktif dan siap digunakan</p>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="accordion-item">
+                        <h2 class="accordion-header">
                           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo"><b>Syarat dan Ketentuan</b></button>
                         </h2>
                         <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
@@ -221,7 +263,7 @@
                     <!--Accordion-->
                   </div>
                   <div class="modal-footer">
-                    <button type="button" class="btn btn-success">Rp. 50.000</button>
+                    <a href="#" class="btn btn-success">Rp. 50.000</a>
                   </div>
                 </div>
               </div>
