--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     <!--Accordion-->
                   </div>
                   <div class="modal-footer">
-                    <a href="https://wa.me/+6283191290689?text=Hai%20%20kak%20saya%20mau%20beli%20membership%20bronzenya%20dong%3F" class="btn btn-success">Rp. 25.000</a>
+                    <a href="https://wa.me/+6283191290689?text=Hai%20%20kak%20saya%20mau%20beli%20membership%20bronzenya%20dong%20" class="btn btn-success">Rp. 25.000</a>
                   </div>
                 </div>
               </div>
@@ -185,7 +185,7 @@
                     <!--Accordion-->
                   </div>
                   <div class="modal-footer">
-                    <a href="https://wa.me/+6283191290689?text=Hai%20%20kak%20saya%20mau%20beli%20membership%20silvernya%20dong%3F" class="btn btn-success">Rp. 30.000</a>
+                    <a href="https://wa.me/+6283191290689?text=Hai%20%20kak%20saya%20mau%20beli%20membership%20silvernya%20dong%20" class="btn btn-success">Rp. 30.000</a>
                   </div>
                 </div>
               </div>
@@ -263,7 +263,7 @@
                     <!--Accordion-->
                   </div>
                   <div class="modal-footer">
-                    <a href="https://wa.me/+6283191290689?text=Hai%20%20kak%20saya%20mau%20beli%20membership%20goldnya%20dong%3F" class="btn btn-success">Rp. 50.000</a>
+                    <a href="https://wa.me/+6283191290689?text=Hai%20%20kak%20saya%20mau%20beli%20membership%20goldnya%20dong%20" class="btn btn-success">Rp. 50.000</a>
                   </div>
                 </div>
               </div>
