--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div class="logo" style="margin-top: 20px">
       <img src="LogofixZippy.png" alt="" width="250px" style="margin: auto; display: flex" />
     </div>
+    <p class="text-center" style="font-size: 14px"><b>Ojek Online | Food Driver | Kurir | Homecare</b></p>
     <h2 class="text-center mt-4">
       <b>Pilih <span style="color: #ff9933">Layananmu</span> Dulu Ya</b>
     </h2>
@@ -21,7 +22,7 @@
 
     <!-- Layanan -->
     <div class="container mt-3" style="width: 90%">
-      <select id="layananSelect" class="form-select" aria-label="Default select example">
+      <select id="layananSelect" class="form-select form-select-lg mb-3 shadow mb-5 bg-body-tertiary rounded" aria-label="Large select example">
         <option selected disabled>Pilih Layananmu</option>
         <option value="ojek">🛵 Ojek Online</option>
         <option value="food">🍔 Food Delivery</option>
@@ -108,7 +109,7 @@
                     <!--Accordion-->
                   </div>
                   <div class="modal-footer">
-                    <a href="https://wa.me/+6283191290689?text=Hai%20%20kak%20saya%20mau%20beli%20membership%20bronzenya%20dong%20" class="btn btn-success">Rp. 25.000</a>
+                    <a href="https://wa.me/+6283191290689?text=Hai%20%20kak%20saya%20mau%20beli%20membership%20bronzenya%20dong%20" class="btn btn-success">Rp. 20.000</a>
                   </div>
                 </div>
               </div>
@@ -216,7 +217,7 @@
                       <p style="margin-top: -8px">3. Kecepetan pengiriman 20 menit</p>
                       <p><b>📍 Diluar Kota Mataram</b></p>
                       <p>1. Gratis Ongkir 2x untuk layanan ojek, food delivery, dan kurir</p>
-                      <p style="margin-top: -8px">2. Dapatkan diskon sebanyak 3x hingga 25% untuk semua layanan</p>
+                      <p style="margin-top: -8px">2. Dapatkan diskon sebanyak 6x hingga 25% untuk semua layanan</p>
                     </div>
                     <!--Accordion-->
                     <div class="accordion accordion-flush" id="accordionFlushExample">
@@ -263,7 +264,7 @@
                     <!--Accordion-->
                   </div>
                   <div class="modal-footer">
-                    <a href="https://wa.me/+6283191290689?text=Hai%20%20kak%20saya%20mau%20beli%20membership%20goldnya%20dong%20" class="btn btn-success">Rp. 50.000</a>
+                    <a href="https://wa.me/+6283191290689?text=Hai%20%20kak%20saya%20mau%20beli%20membership%20goldnya%20dong%20" class="btn btn-success">Rp. 40.000</a>
                   </div>
                 </div>
               </div>
