--- a/food-delivery.html
+++ b/food-delivery.html
@@ -46,11 +46,11 @@
             </div>
             <div class="mb-3">
               <label for="lokasijemput" class="form-label">Mau Beli Dimana ?</label>
-              <input type="text" class="form-control" id="lokasijemput" name="lokasijemput" />
+              <input type="text" class="form-control" id="lokasijemput" name="lokasijemput" placeholder="Misal: KFC Mataram" />
             </div>
             <div class="mb-3">
               <label for="lokasiantar" class="form-label">Mau Dianterin Kemana ?</label>
-              <input type="text" class="form-control" id="lokasiantar" name="lokasiantar" />
+              <input type="text" class="form-control" id="lokasiantar" name="lokasiantar" placeholder="Masukkan dengan alamatmu" />
             </div>
             <!-- Tampilkan peta Leaflet disini -->
             <div id="mapid" class="map" style="border-radius: 10px"></div>
@@ -66,7 +66,7 @@
             </div>
             <div class="mb-3">
               <label for="" class="form-label">Pesanan</label>
-              <textarea class="form-control mb-3" id="exampleComment" name="catatan" rows="5" placeholder="Masukkan Pesananmu disini"></textarea>
+              <textarea class="form-control mb-3" id="exampleComment" name="catatan" rows="5" placeholder="Misal: Belikan saya KFC paket A"></textarea>
             </div>
             <div class="mb-3 form-check">
               <input type="checkbox" class="form-check-input" id="exampleCheck1" />
