--- a/ojek-online.html
+++ b/ojek-online.html
@@ -71,7 +71,9 @@
             <div class="mb-3 form-check">
               <input type="checkbox" class="form-check-input" id="exampleCheck1" />
               <label class="form-check-label" for="exampleCheck1">Anda yakin pesanan sudah benar ?</label>
-              <p class="mt-2" style="color: gray; font-size: 14px"><b>Catatan : Khusus untuk daerah sekitar Mataram Rp 8.000</b></p>
+              <p class="mt-2" style="color: gray; font-size: 14px"><b>Catatan : </b></p>
+              <p style="color: grey; font-size: 14px; margin-top: -10px">Khusus untuk daerah sekitar Mataram Rp 8.000</p>
+              <p style="color: grey; font-size: 14px; margin-top: -10px">Jika alamat pengantaran di luar wilayah kota mataram, maka akan dikenakan tambahan biaya sebesar Rp. 5000</p>
             </div>
             <div class="bayar">
               <div class="d-grid gap-2">
