update fix dashboard

--- a/index.html
+++ b/index.html
@@ -61,8 +61,9 @@
           </p>
 
           <!--MemberBronze-->
-          <div class="alert alert-primary mt-4" role="alert">
-            <p style="font-size: 20px"><b>Member Bronze</b></p>
+          <div class="alert alert-primary mt-4" role="alert" style="display: flex; flex-direction: column; align-items: center">
+            <img src="silver.png" alt="" height="100px" class="text-center" />
+            <p style="font-size: 20px" class="text-center"><b>Member Bronze</b></p>
             <!-- Button trigger modal -->
             <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#exampleModalLabelBronze">Lihat Member <i class="bi bi-arrow-right-circle-fill"></i></button>
 
@@ -136,7 +137,8 @@
           <!--MemberBronze-->
 
           <!--MembershipSilver-->
-          <div class="alert alert-primary mt-4" role="alert">
+          <div class="alert alert-primary mt-4" role="alert" style="display: flex; flex-direction: column; align-items: center">
+            <img src="bronze.png" alt="" class="text-center" height="100px" />
             <p style="font-size: 20px"><b>Member Silver</b></p>
             <!-- Button trigger modal -->
             <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#exampleModalLabelSilver">Lihat Member <i class="bi bi-arrow-right-circle-fill"></i></button>
@@ -213,7 +215,8 @@
           <!--MembershipSilver-->
 
           <!--MembershipGold-->
-          <div class="alert alert-primary mt-4" role="alert">
+          <div class="alert alert-primary mt-4" role="alert" style="display: flex; flex-direction: column; align-items: center">
+            <img src="gold.png" alt="" height="100px" />
             <p style="font-size: 20px"><b>Member Gold</b></p>
             <!-- Button trigger modal -->
             <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#exampleModalLabelGold">Lihat Member <i class="bi bi-arrow-right-circle-fill"></i></button>
