update for membership

--- a/index.html
+++ b/index.html
@@ -82,10 +82,8 @@
                     </div>
                     <div class="modal-body">
                       <div class="alert alert-success" role="alert">
-                        <p><b>📍 Sekitar Kota Mataram</b></p>
-                        <p>1. Dapatkan diskon sebanyak 2x sebesar 25% untuk semua layanan</p>
-                        <p><b>📍 Diluar Kota Mataram</b></p>
-                        <p>1. Dapatkan diskon sebanyak 1x sebesar 25% untuk semua layanan</p>
+                        <p>1. Dapatkan diskon sebanyak 6x sebesar 12% untuk semua layanan</p>
+                        <p style="margin-top: -12px">2. Prioritas pelanggan dengan membeli paket membership bronze</p>
                       </div>
                       <!--Accordion-->
                       <div class="accordion accordion-flush" id="accordionFlushExample">
@@ -132,7 +130,7 @@
                       <!--Accordion-->
                     </div>
                     <div class="modal-footer">
-                      <a href="https://wa.me/+6283191290689?text=Hai%20%20kak%20saya%20mau%20beli%20membership%20bronzenya%20dong%20" class="btn btn-success">Rp. 20.000</a>
+                      <a href="https://wa.me/+6283191290689?text=Hai%20%20kak%20saya%20mau%20beli%20membership%20bronzenya%20dong%20" class="btn btn-success">Rp. 15.000</a>
                     </div>
                   </div>
                 </div>
@@ -160,12 +158,8 @@
                     </div>
                     <div class="modal-body">
                       <div class="alert alert-success" role="alert">
-                        <p><b>📍 Sekitar Kota Mataram</b></p>
-                        <p>1. Gratis Ongkir 3x untuk layanan ojek, food delivery, dan kurir</p>
-                        <p style="margin-top: -8px">2. Dapatkan diskon sebanyak 2x hingga 25% untuk semua layanan</p>
-                        <p><b>📍 Diluar Kota Mataram</b></p>
-                        <p>1. Gratis Ongkir 2x untuk layanan ojek, food delivery, dan kurir</p>
-                        <p style="margin-top: -8px">2. Dapatkan diskon sebanyak 2x hingga 25% untuk semua layanan</p>
+                        <p>1. Dapatkan diskon sebanyak 10x sebesar 12% untuk semua layanan</p>
+                        <p style="margin-top: -12px">2. Prioritas pelanggan dengan membeli paket membership silver</p>
                       </div>
                       <!--Accordion-->
                       <div class="accordion accordion-flush" id="accordionFlushExample">
@@ -212,7 +206,7 @@
                       <!--Accordion-->
                     </div>
                     <div class="modal-footer">
-                      <a href="https://wa.me/+6283191290689?text=Hai%20%20kak%20saya%20mau%20beli%20membership%20silvernya%20dong%20" class="btn btn-success">Rp. 30.000</a>
+                      <a href="https://wa.me/+6283191290689?text=Hai%20%20kak%20saya%20mau%20beli%20membership%20silvernya%20dong%20" class="btn btn-success">Rp. 25.000</a>
                     </div>
                   </div>
                 </div>
@@ -240,13 +234,9 @@
                     </div>
                     <div class="modal-body">
                       <div class="alert alert-success" role="alert">
-                        <p><b>📍 Sekitar Kota Mataram</b></p>
-                        <p>1. Gratis Ongkir 4x untuk layanan ojek, food delivery, dan kurir</p>
-                        <p style="margin-top: -8px">2. Dapatkan diskon sebanyak 3x hingga 25% untuk semua layanan</p>
-                        <p style="margin-top: -8px">3. Kecepetan pengiriman 20 menit</p>
-                        <p><b>📍 Diluar Kota Mataram</b></p>
-                        <p>1. Gratis Ongkir 2x untuk layanan ojek, food delivery, dan kurir</p>
-                        <p style="margin-top: -8px">2. Dapatkan diskon sebanyak 6x hingga 25% untuk semua layanan</p>
+                        <p>1. Dapatkan diskon sebulan sebesar 12% untuk semua layanan</p>
+                        <p style="margin-top: -12px">2. Gratis Ongkir sebanyak 2 kali (untuk wilayah kota mataram)</p>
+                        <p style="margin-top: -12px">3. Prioritas pelanggan dengan membeli paket membership bronze</p>
                       </div>
                       <!--Accordion-->
                       <div class="accordion accordion-flush" id="accordionFlushExample">
@@ -293,7 +283,7 @@
                       <!--Accordion-->
                     </div>
                     <div class="modal-footer">
-                      <a href="https://wa.me/+6283191290689?text=Hai%20%20kak%20saya%20mau%20beli%20membership%20goldnya%20dong%20" class="btn btn-success">Rp. 40.000</a>
+                      <a href="https://wa.me/+6283191290689?text=Hai%20%20kak%20saya%20mau%20beli%20membership%20goldnya%20dong%20" class="btn btn-success">Rp. 35.000</a>
                     </div>
                   </div>
                 </div>
