--- a/index.html
+++ b/index.html
@@ -108,10 +108,9 @@
                             <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
                               <div class="accordion-body">
                                 <p style="margin-top: -10px">1. Pilih paket membership yang kamu mau</p>
-                                <p style="margin-top: -10px">2. Beli paket membership</p>
-                                <p style="margin-top: -10px">3. Admin akan memberikan form isi data membership kamu di whatsapp</p>
-                                <p style="margin-top: -10px">4. Isi data formulir membership kamu</p>
-                                <p style="margin-top: -10px">5. Membership kamu aktif dan siap digunakan</p>
+                                <p style="margin-top: -10px">2. Beli paket membership menggunakan metode pembayaran (dana, gopay, dan shopepay)</p>
+                                <p style="margin-top: -10px">3. Isi data formulir membership kamu</p>
+                                <p style="margin-top: -10px">4. Membership kamu aktif dan siap digunakan</p>
                               </div>
                             </div>
                           </div>
@@ -186,10 +185,9 @@
                             <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
                               <div class="accordion-body">
                                 <p style="margin-top: -10px">1. Pilih paket membership yang kamu mau</p>
-                                <p style="margin-top: -10px">2. Beli paket membership</p>
-                                <p style="margin-top: -10px">3. Admin akan memberikan form isi data membership kamu di whatsapp</p>
-                                <p style="margin-top: -10px">4. Isi data formulir membership kamu</p>
-                                <p style="margin-top: -10px">5. Membership kamu aktif dan siap digunakan</p>
+                                <p style="margin-top: -10px">2. Beli paket membership menggunakan metode pembayaran (dana, gopay, dan shopepay)</p>
+                                <p style="margin-top: -10px">3. Isi data formulir membership kamu</p>
+                                <p style="margin-top: -10px">4. Membership kamu aktif dan siap digunakan</p>
                               </div>
                             </div>
                           </div>
@@ -265,10 +263,9 @@
                             <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
                               <div class="accordion-body">
                                 <p style="margin-top: -10px">1. Pilih paket membership yang kamu mau</p>
-                                <p style="margin-top: -10px">2. Beli paket membership</p>
-                                <p style="margin-top: -10px">3. Admin akan memberikan form isi data membership kamu di whatsapp</p>
-                                <p style="margin-top: -10px">4. Isi data formulir membership kamu</p>
-                                <p style="margin-top: -10px">5. Membership kamu aktif dan siap digunakan</p>
+                                <p style="margin-top: -10px">2. Beli paket membership menggunakan metode pembayaran (dana, gopay, dan shopepay)</p>
+                                <p style="margin-top: -10px">3. Isi data formulir membership kamu</p>
+                                <p style="margin-top: -10px">4. Membership kamu aktif dan siap digunakan</p>
                               </div>
                             </div>
                           </div>
@@ -314,7 +311,7 @@
           </h3>
           <p class="text-center">Hubungi kontak admin jika kamu mempunyai kendala dalam memakai layanan jasa kami</p>
           <div class="d-grid gap-2">
-            <a class="btn btn-primary" type="button"><i class="bi bi-whatsapp"></i> WhatsApp</a>
+            <a class="btn btn-primary" href="https://wa.me/+6283191290689?text=Hai%20%20kak%20saya%20ada%20kendala%20nih%" type="button"><i class="bi bi-whatsapp"></i> WhatsApp</a>
           </div>
         </div>
       </div>
